grammar.txt
statement = def ';'
          | expr '=' expr ';'
          | block
          ;

    def = 'def' name ':' ((type ('=' expr)?) | ('=' expr)) ;

    block = '{' statement* '}' ;

    expr = primary | prefix | binary;

        primary = access
                | char
                | list
                | function
                | integer
                | name
                | path
                | var
                ;

            access = prefix '.' name ;

            list = list_open ','* (list_member ',')* list_close ;
                list_member = expr
                            | name ':' type
                            | name '=' expr
                            | name ':' type '=' expr
                            ;

            function = list '->' expr block? ;

            path = name ('::' name)* ;

            var = name ':' ((type ('=' expr)?) | ('=' expr)) ;

        prefix = '-' primary
               | '!' primary
               | 'import' path
               | primary
               ;

        binary = expr op expr
               | expr expr
               ;

            op = '+'
               | '-'
               | '*'
               | '/'
               | '^'
               | '%'
               | '>'
               | '<'
               | '<='
               | '>='
               | '=='
               | '!='
               | 'and'
               | 'or'
               ;

type = access
     | list
     | function_type
     | name
     ;

    function_type = type_list '->' type ;
